--- a/report/src/sections/06-discussion.tex
+++ b/report/src/sections/06-discussion.tex
@@ -77,7 +77,7 @@ Since more nodes would be turned on and off and switch IPs more often.
 
 This is also why think that the amount of non-unique validators is higher.
 Because even though we found more validators than the~\gls{de-anon paper} and de-anonymized a larger portion of the network, we found a higher rate of non-unique validators comparatively.
-We attribute this to the large amount of nodes that inhabit some of the nodes that we connected to.
+We attribute this to the large amount of validators that inhabit some of the nodes that we connected to.
 
 
 
