Added some more information regarding logging

--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -153,6 +153,7 @@ So no changes have been made to variables already being used in the Prysm client
 
 \subsubsection{Peers}\label{subsubsec:peers}
 The logs of the attestations share similarities with the logs of the peers, so the peers will be described first.
+All changes are done to the \texttt{beacon-chain} files in Prysm.
 
 A pointer to a \texttt{Service} object is typically maintained in the different classes of the Prysm code.
 This object is an implementation of an interface responsible for handling functionality coupled with the given class.
@@ -161,7 +162,16 @@ The class that handles~\gls{p2p} connections has got this as well, with several 
 Because of said object, information about all earlier or connected peers is available.
 Set to run every minute, the modified code requests all peers and iterates through them,
 logging information.
-\todo{where have we described this?}
+
+For a peer, by accessing the \texttt{service} class in the \texttt{p2p} files, we are able to log:
+\begin{itemize}
+     \item Node ID
+     \item IP address
+     \item Subscribed subnets
+     \item Connection state
+     \item Connection direction (who made first contact)
+     \item ENR
+\end{itemize}
 
 
 Also in each iteration,
@@ -176,7 +186,7 @@ This implementation primarily includes functions specific for the attestations, 
 Therefore, each \texttt{Service} object has a pointer to a configuration of the running chain.
 Referencing this pointer allows the class to access functions as the ones available in the~\gls{p2p} class.
 
-Instead of being logged for once every minute, as in~\autoref{subsubsec:peers},
+Instead of being logged once every minute, as in~\autoref{subsubsec:peers},
 we log information about an attestation whenever we receive one.
 
 With the proposer DoS attack in mind, we are interested in receiving the public key, ID of the validator,
@@ -187,7 +197,15 @@ Getting the public key requires little effort,
 as there exists a function, called \texttt{extractPublicKey}, which uses the attestation's data to get public key and ID of the validator.
 Knowing the IP address is also straight-forward, as the peer \texttt{Service} object includes a function called \texttt{address}, returning the address of the peer sending the attestation.
 
-After collection all the information available for an attestation,
+In addition to this, we also log the following information available from processing the attestation:
+\begin{itemize}
+     \item Subnet which the attestation was sent to
+     \item Slot associated to the attestation
+     \item Source
+     \item Target
+\end{itemize}
+
+After collecting all the information available for an attestation,
 the data is logged to a database as in~\autoref{subsubsec:peers}.
 
 \subsection{Setup}\label{subsec:setup}
