Changed connection direction

--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -169,7 +169,7 @@ For a peer, by accessing the \texttt{service} class in the \texttt{p2p} files, w
      \item IP address
      \item Subscribed subnets
      \item Connection state
-     \item Connection direction (who made first contact)
+     \item Connection direction (which node discovered the other node)
      \item ENR
 \end{itemize}
 
