--- a/report/src/sections/04-experimental-protocol.tex
+++ b/report/src/sections/04-experimental-protocol.tex
@@ -189,7 +189,7 @@ Referencing this pointer allows the class to access functions as the ones availa
 Instead of being logged once every minute, as in~\autoref{subsubsec:peers},
 we log information about an attestation whenever we receive one.
 
-With the proposer DoS attack in mind, we are interested in receiving the public key, ID of the validator,
+With the proposer DoS attack in mind, we are interested in receiving the public key and ID of the validator,
 who is the creator of the attestation.
 Also, we want the IP address of the peer that sent the attestation to the node.
 
