--- a/report/src/sections/08-future-works.tex
+++ b/report/src/sections/08-future-works.tex
@@ -10,7 +10,7 @@ This method aims to improve the security of the network by obfuscating the ident
 It does so by making the validators commit to a shared secret which can be bound to a validator's identity and randomized to match the specific validator's identity.
 
 Every epoch a random set of validators are chosen to gather commitments from a set of validators using~\gls{randao}.
-Proposers then shuffle the commitments over the duration of 8182 slots.
+Proposers then shuffle the commitments over the duration of 8182 slots ($\sim$24 hours).
 At the end of that period,~\gls{randao} is then used to map the shuffled list onto the slots in the same way it has been done since Ethereum used~\gls{pos}.
 Validators can now decrypt the commitment that matches their identity and propose a block in the slot that they are assigned to.
 
