--- a/report/src/sections/02-background.tex
+++ b/report/src/sections/02-background.tex
@@ -1,64 +1,62 @@
 
 \section{Background}\label{sec:background}
-To get a better understanding of the attack that we will be performing in this paper, we need to go through some of the concepts that are used in the attack.
+To better understand the attack we will be performing in this paper, we need to review some of the concepts used in it.
 This section dives into the inner workings of the Ethereum network layer and the consensus algorithm.
 It will also delve into the inspiration for the attack.
 
-%In this section, we will go through some of the concepts that will be used in the rest of the paper as well as some surrounding context for the attack.
 
 \subsection{Ethereum and Proof of Stake}\label{subsec:ethereum-and-proof-of-stake}
 Ethereum is a blockchain platform that allows developers to create decentralized applications using smart contracts.
 Previously operating with a~\gls{pow} consensus algorithm, Ethereum transitioned to a~\gls{pos} consensus algorithm in 2022~\cite{EthereumProof-of-stakePoS}.
-This transition was done to reduce the energy consumption of the network and to increase the scalability of the network.
+This transition was made to reduce the network's energy consumption and increase its scalability.
 The transition was done in a series of upgrades called the Ethereum 2.0 upgrade.
 
 ~\gls{pos} is a consensus algorithm used to ensure that everyone agrees on the same state of a blockchain.
-This includes guidance on whom gets to produce blocks and confirm transactions.
-In Ethereum, it works by choosing block proposers from a set of validators based on the amount of cryptocurrency they have staked in the blockchain.
+The algorithm includes guidance on whom gets to produce blocks and confirm transactions.
+In Ethereum, the protocol chooses block proposers from a set of validators based on the amount of cryptocurrency they have staked in the blockchain.
 All other validators are then given the role of confirming this block, adding it to the canonical chain.
 
 The proposers get rewarded for creating a valid block, and the validators get rewarded for confirming the block.
-Block proposing happens within epochs of 32 blocks, and for each block a validator is selected as a proposer by the protocol.
+Block proposing happens within epochs of 32 blocks, and the protocol selects a validator as a proposer for each block.
 The proposer is chosen through a random process weighted by the amount of ether the validator has staked.
-To simulate this random selection, Etheruem uses the publicly available \gls{randao} algorithm.
+Ethereum uses the publicly available \gls{randao} algorithm to simulate this random selection.
 
-A block needs to be proposed by the designated proposer for the slot and confirmed by other validators within the 12-second time limit of the slot.
-If a fork happens, the validators have to choose which fork to follow.
-This is done by using the \gls{lmd-ghost}~\cite{EthereumProof-of-stakePoS} algorithm which chooses the fork with the greatest weight of attestations in its history.
+The designated proposer must propose a block for the slot, and other validators must verify it within the slot's 12-second time limit.
+If a fork happens, the validators must choose which fork to follow.
+Choosing the fork is done by following the \gls{lmd-ghost}~\cite{EthereumProof-of-stakePoS} algorithm which chooses the fork with the greatest weight of attestations in its history.
 
 \subsection{Subnets}\label{subsec:subnets}
 The Ethereum network is split up into smaller networks called subnets.
-The nodes in the network are split into a total of 64 subnets and an additional subnet for attestation aggregates with each node subscribing to two subnets by default.
+The network's nodes are split into 64 subnets and an additional subnet for attestation aggregation, with each node subscribing to two subnets by default.
 Being subscribed to a subnet is also referred to as being backbone of a subnet.
 
-These subnets are used to help with the scalability of the network by distributing the load of messages.
-Most messages are sent between nodes in the same subnet.
-This lessens the load of a node, as it will receive $\frac{2}{64}$ of all messages in the blockchain instead of all messages.
+These subnets are used to help with the scalability of the network by distributing the load from messages.
+Most messages are sent between nodes in the same subnet, lessening the load of a node, as it will receive $\frac{2}{64}$ of all messages in the blockchain instead of all messages.
 
 
-Nodes are not able to be a peer with all nodes in a subnet.
+Nodes cannot be a peer with all nodes in a subnet.
 Hence, the peers a node can reach within the same subnet are called its fanout~\cite{heimbach2024deanonymizingethereumvalidatorsp2p}.
 
-Within a subnet, nodes choose a subset of peers in the same subnet to share its messages with.
-Choosing which nodes are a part of this subset is done based on a peer score determined by a peer's performance.
+Within a subnet, nodes choose a subset of peers in the same subnet to share their messages with.
+Choosing which nodes belong to this subset is based on a peer score determined by a peer's performance.
 Nodes send all messages they receive within a subnet to these best-performing peers.
 
 \subsection{Attestations}\label{subsec:attestations}
-Each epoch, a validator is expected to broadcast what is called an attestation~\cite{attestations}.
-The overall purpose of this message is to make sure that validators agree on the canonical chain.
+A validator is expected to broadcast a vote each epoch, also called an attestation~\cite{attestations}.
+This message's overall purpose is to ensure that validators agree on the canonical chain.
 An attestation is sent by its author to only a single subnet.
-Afterwards, it will naturally be broadcasted to other parts of the network by peers in that subnet
+Afterward, peers in that subnet will naturally broadcast it to other parts of the network.
 
-A single validator is assigned by the blockchain protocol to a single slot each epoch, where they must publish their attestation.
-In this attestation, the validator among other things votes for what it sees as the \textit{source} and \textit{target}.
+The blockchain protocol assigns a single validator to a single slot each epoch, where they must publish their attestation.
+In this attestation, the validator votes for what it sees as the \textit{source} and \textit{target}.
 
-The source is what the validator sees as being the most recent justified block.
+The validator sees the source as the most recent justified block.
 
-The target is what the validator sees as being the first block in the current epoch.
+The validator sees the target as the first block in the current epoch.
 
-All validators who are assigned to attest in the same slot are said to be in the same committee.
-All attestations broadcast in each subnet are then collected by 16 assigned aggregators per subnet.
-These collect the votes that are equivalent to their own into an aggregation and broadcast this to the network.
+All validators assigned to attest in the same slot are referred to as being on the same committee.
+Sixteen assigned aggregators per subnet then collect all attestations broadcast in each subnet.
+These collect votes equivalent to their own, aggregate them, and broadcast them to the network.
 These are then to be included in the block of the designated slot.
 
 
@@ -78,19 +76,18 @@ These are then to be included in the block of the designated slot.
 %It does, however, come with a higher computational cost and is not as widely used and documented as~\gls{zk-snark}.
 
 \subsection{Validators}\label{subsec:validator}
-A validator is an entity running on a client,
-which, among other things, consists of an ether balance and a key-pair for identifying it~\cite{Staking}.
+A validator is an entity running on a network client, among other things, consisting of an ether balance and a key pair for identifying it~\cite{Staking}.
 
 For a validator client to work, it needs to be run in cooperation with a consensus node client.
-A consensus node client is able to run an unbounded number of validators.
-Having several validators running in cooperation with a single consensus node means that they all share identity with that node.
-This includes data such as IP addresses and the ID of the node.
+A consensus node client can run an unbounded number of validators.
+Several validators running in cooperation with a single consensus node mean that they all share the same identity.
+The shared identity includes data such as IP addresses and the ID of the consensus node.
 
 At each slot, the~\gls{randao} algorithm is used to select a validator responsible for processing transactions,
 including them in a block,
-and then proposing this block to the blockchain.
+and then propose this block to the blockchain.
 This procedure is also illustrated by~\autoref{fig:proposerChoice}.
-Determining who is going to be a block proposer is explained in~\autoref{subsec:randao}.
+Determining who will be a block proposer is explained in~\autoref{subsec:randao}.
 Along with this, the validator is also responsible for attesting blocks proposed by other validators,
 ensuring the liveness of the chain.
 
@@ -143,9 +140,9 @@ Some of these validators are chosen to propose a block in a designated slot.}
 \end{figure}
 To be able to run a single validator, one must stake 32 ETH,
 which is ~\$99,776\footnote{As of 2024-11-18 seen on \href{https://beaconcha.in/}{beaconcha.in}}.
-Having this much money at stake should be enough to ensure that a validator acts honestly.
+Having this much money at stake should ensure that a validator acts honestly.
 Doing so will also earn the validator a reward.
-However, acting dishonest will result in the burning or slashing of ether.
+However, acting dishonestly will result in the burning or slashing of ether.
 The rewards and punishments are described in the following sections.
 \subsubsection{Validator rewards}\label{subsubsec:valrewards}
 Validators are rewarded for several different actions~\cite{PoSRewAndPen}.
