--- a/report/src/setup/acronyms.tex
+++ b/report/src/setup/acronyms.tex
@@ -16,7 +16,7 @@
 \newacronym{lmd-ghost}{LMD-GHOST}{Latest Message Driven Greedy Heaviest Observed Subtree}
 \newacronym{randao}{RANDAO}{random number generator}
 \newacronym{dos}{DoS}{Denial-of-Service}
-\newacronym{enr}{ENR}{Ethernet node record}
+\newacronym{enr}{ENR}{Ethernet Node Record}
 \newacronym{p2p}{P2P}{Peer-to-Peer}
 \newacronym{de-anon paper}{De-anonymizing Paper}{"Deanonymizing Ethereum Validators: The P2P Network Has a Privacy Issue"}
 \newacronym{mev}{MEV}{Maximal Extractable Value}
