--- a/report/src/sections/05-results.tex
+++ b/report/src/sections/05-results.tex
@@ -28,7 +28,7 @@ Failing to categorize a peer could be because the peer could be hosting a valida
 
 \begin{table}[]
     \centering
-    \caption{Distribution of nodes into the four different categories}
+    \caption{Distribution of nodes into the four different categories.}
     \begin{tabular}{lll}
         \hline
         & \textbf{Nodes} & \textbf{Distribution} \\ \hline
@@ -51,7 +51,7 @@ In total, we logged 1,183 unique IP addresses.
 
 \begin{table}[]
     \centering
-    \caption{Number of validators located by our modified Prysm node. The first column indicates the total number of validators. The second column indicates validators with more than one IP-address mapped to it.}
+    \caption{The number of validators located by our modified Prysm node. The first column indicates the total number of validators. The second column indicates validators with more than one IP address mapped to them.}
     \begin{tabular}{lll}
         \hline
         & \textbf{Validators} & \textbf{Non-Unique Validators} \\ \hline
